Fixed footer, google search optimization

--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en-US">
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="Spark Hex is a software company with the main focus on creating mobile video-games.">
+	
 	<title>Spark Hex</title>
+	
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="css/styles.css">
 	<link rel="shortcut icon" href="images/icon.png"/>
@@ -22,16 +25,14 @@
 		</div>
 		
 		<div class="col">
-			<a href="projects.html"><img src="images/QiMind.png" alt="" height="64px"/></a>
+			<a href="projects.html"><img src="images/QiMind.png" alt="" height="48px"/></a>
 		</div>
 	</div>
 	
 	<div class="container" align="center">
 		<img class="main-page-logo" src="images/logo.png" alt=""/><br />
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-		Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-		Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-		Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p><i>Spark Hex</i> is a software company that we created to follow our passion for creating video-games. Our main focus currently are mobile games as they are 
+		easier to publish and advertise for a start-up company like us. If you have any questions or offers please don't hesitate to contact us.</p>
 	</div>
 	
 	<div class="footer">
