--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
 		</div>
 		
 		<div class="col">
-			<a href="projects.html"><img src="images/QiMind.png" alt="" height="64px"/></a>
+			<a href="projects.html"><img src="images/QiMind.png" alt="" height="48px"/></a>
 		</div>
 	</div>
 	
@@ -41,15 +41,12 @@
 				</tr>
 				<tr>
 					<td>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-						Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-						Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<p><i>Cube Motion</i> is our first project and is currently under development. We can't share too much about it right now, but stay tuned for the launch.</p>
 					</td>
 				</tr>
 				<tr>
 					<td>
-						<p>Check it out <a href=""><i>here</i></a></p>
+						<p>Check it out <a href="index.html"><i>here</i></a></p>
 					</td>	
 				</tr>
 			</table>
