--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 	</div>
 	
 	<div class="row" align="center">
-		<div class = "col-md">
+		<div class = "col-md-6">
 			<table>
 				<tr>
 					<th>
@@ -55,7 +55,7 @@
 			</table>
 		</div>
 		
-		<div class = "col-md">
+		<div class = "col-md-6">
 			<table>
 				<tr>
 					<th>
@@ -83,7 +83,7 @@
 			</table>
 		</div>
 		
-		<div class = "col-md">
+		<div class = "col-md-6">
 			<table>
 				<tr>
 					<th>
@@ -111,7 +111,7 @@
 			</table>
 		</div>
 		
-		<div class = "col-md">
+		<div class = "col-md-6">
 			<table>
 				<tr>
 					<th>
@@ -139,7 +139,7 @@
 			</table>
 		</div>
 		
-		<div class = "col-md">
+		<div class = "col">
 			<table>
 				<tr>
 					<th>
