Added google verification tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="description" content="Spark Hex is a software company with the main focus on creating mobile video-games.">
+	<meta name="google-site-verification" content="rL3_ggV0QDRof58ZzCBS2Zw-qFSeu_vVhT9nCVKJlXM" />
 	
 	<title>Spark Hex</title>
 	
