Small bootstrap tweek

--- a/about.html
+++ b/about.html
@@ -139,7 +139,9 @@
 			</table>
 		</div>
 		
-		<div class = "col">
+		<div class="col"></div>
+		
+		<div class = "col-md-6">
 			<table>
 				<tr>
 					<th>
@@ -166,6 +168,8 @@
 				</tr>
 			</table>
 		</div>
+		
+		<div class="col"></div>
 	</div>
 	
 	<div class="footer">
