--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,9 @@
 	</div>
 	
 	<div class="row" align="center">
-		<div class = "col">
+		<div class="col"></div>
+		
+		<div class = "col-md-6">
 			<table>
 				<tr>
 					<th>
@@ -51,6 +53,8 @@
 				</tr>
 			</table>
 		</div>
+		
+		<div class="col"></div>
 	</div>
 	
 	<div class="footer">
