--- a/about.html
+++ b/about.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<title>About</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/nav.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="shortcut icon" href="images/icon.png"/>
+	<link rel="shortcut icon" href="icon/64.png"/>
 </head>
 <body>
 	<div class="navbar">
@@ -145,7 +146,7 @@
 			<table>
 				<tr>
 					<th>
-						<img src="images/gabi.jpg" class="rounded-circle" alt="" height="128px"/>
+						<img src="images/gabi.png" class="rounded-circle" alt="" height="128px"/>
 					</th>
 				</tr>
 				<tr>
