--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 	<title>Spark Hex</title>
 	
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/nav.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="shortcut icon" href="images/icon.png"/>
+	<link rel="shortcut icon" href="icon/64.png"/>
 </head>
 <body>
 	<div class="navbar">
