--- a/projects.html
+++ b/projects.html
@@ -4,8 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Projects</title>
 	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/nav.css">
 	<link rel="stylesheet" href="css/styles.css">
-	<link rel="shortcut icon" href="images/icon.png"/>
+	<link rel="shortcut icon" href="icon/64.png"/>
 </head>
 <body>
 	<div class="navbar">
